--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "node-pgp-mail",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/cdauth/node-pgp-postgres.git"
   },
   "license": "MIT",
-  "description": "Library to send encrypted and signed e-mails.",
+  "description": "Library to send PGP-encrypted and signed e-mails.",
   "dependencies": {
-	  "node-pgp": "git://github.com/cdauth/node-pgp.git",
-	  "async": "x.x.x",
-	  "nodemailer" : "x.x.x",
-      "mimelib" : "x.x.x"
+	  "node-pgp": "0.0.x",
+	  "async": "0.2.x",
+	  "nodemailer" : "0.4.x",
+      "mimelib" : "0.2.x"
   }
 }
